--- a/projects/templates/profile_detail.html
+++ b/projects/templates/profile_detail.html
@@ -8,5 +8,14 @@
 <body>
     <h1>{{profile.name}}</h1>
     <p>{{profile.bio}}</p>
+    {% for project in projects %}
+        <h2>{{project.name}}</h2>
+        <p>{{project.keyword}}</p>
+        <p>{{project.key_skill}}</p>
+    {% endfor %}
+    {% for certificate in certificates %}
+        <h2>{{certificate.name}}</h2>
+        <p>{{certificate.certifying_institution}}</p>
+    {% endfor %}
 </body>
 </html>
